# chronos

./: ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DESIGN_DECISIONS.md  FAQ.md  GEMINI.md  MANIFESTO.md  PHILOSOPHY.md  PRINCIPLES.md  README.md  ROADMAP.md  SECURITY.md  STRATEGY.md  STRUCTURE.tree  SUPPORT.md  TROUBLESHOOTING.md  VISION.md  sonar-project.properties
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
docs/superpowers/plans/: 2026-04-15-chronos-foundation.md
docs/superpowers/specs/: 2026-04-15-chronos-foundation-design.md  2026-04-16-cognitive-memory-mapping.md
locales/: README.ja.md  README.th.md  README.zh.md
src/: main.rs
src/adapters/: mocks.rs  mod.rs  mojo.rs
src/application/: mod.rs  orchestrator.rs
src/domain/: error.rs  mod.rs  models.rs
src/mojo/: engine.mojo
src/ports/: compute.rs  graph.rs  mod.rs  storage.rs
tests/: integration_test.rs
