[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
